<resources>
    <string name="app_name" translatable="false">dm2e</string>
    <string name="title_activity_reference" translatable="false">ReferenceActivity</string>
    <string name="hint_username">Nombre de usuario</string>
    <string name="hint_password">Contraseña</string>
    <string name="text_button_login">LOGIN</string>
    <string name="dont_have_account">¿No tienes cuenta?</string>
    <string name="create_here">, Regístrate aquí</string>
    <string name="hint_email">Correo electrónico</string>
    <string name="hint_name">Nombre completo</string>
    <string name="hint_user">Usuario</string>
    <string name="hint_passwd">Contaseña</string>
    <string name="hint_confirmPasswd">Confirmar contraseña</string>
    <string name="text_button_createaccount">Registrate</string>
    <string name="toolbar_title_createaccount">Crear cuenta</string>
    <string name="username_Card" translatable="false">Paco Ramírez</string>
    <string name="firstword_card">Hace</string>
    <string name="timecard_card">4 días</string>
    <string name="likenumbercard_card">Me Gusta</string>
    <string name="tab_search">Buscar</string>
    <string name="tab_home">Home</string>
    <string name="tab_profile">Perfil</string>
    <string name="login_toast">Introduzca usuario y contraseña</string>
    <string name="login_toast_username">Introduzca usuario</string>
    <string name="login_toast_password">Introduzca contraseña</string>
    <string name="login_error">Ocurrió un error: </string>


    <string name="input_error_name">Nombre completo requerido</string>
    <string name="input_error_email">Email requerido</string>
    <string name="input_error_password">Contraseña requerida</string>
    <string name="input_error_password_length">Contraseña debe contener 6 caracteres mínimo</string>
    <string name="input_error_password_conf">Contraseñas no coinciden</string>
    <string name="registration_success">Cuenta creada!</string>
    <string name="input_error_email_invalid">Introduzca mail válido</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- The class name to the ScrollingChildBehavior required for AppBarLayout -->
    <string name="appbar_scrolling_view_behavior" translatable="false">
        android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="secondword_detail">Me Gusta</string>
    <string name="titleimagedetail">\"Todo copas en la playa\"</string>
    <string name="lorem">Lorem fistrum ese que llega ese que llega se calle ustée fistro diodenoo llevame al sircoo
        no te digo trigo por no llamarte Rodrigor amatomaa tiene musho peligro de la pradera. Hasta luego Lucas de la
        pradera apetecan apetecan ese que llega torpedo sexuarl llevame al sircoo. Se calle ustée benemeritaar se
        calle ustée no te digo trigo por no llamarte Rodrigor de la pradera caballo blanco caballo negroorl te voy a
        borrar el cerito ese pedazo de condemor qué dise usteer. Hasta luego Lucas me cago en tus muelas te va a hasé
        pupitaa por la gloria de mi madre. Torpedo no te digo trigo por no llamarte Rodrigor ese hombree papaar
        papaar quietooor fistro ahorarr ahorarr a wan diodeno. Al ataquerl sexuarl diodeno jarl por la gloria de mi
        madre ahorarr.</string>
    <string name="transitionname_picture">transitionnamepicture</string>
    <string name="searchhinttext">busqueda</string>
    <string name="hint_title">Título</string>
    <string name="hint_description">Descripción</string>
    <string name="text_button_createpost">Crear Post</string>

    <string name="facebook_app_id">687090585094793</string>
    <string name="fb_login_protocol_scheme">fb687090585094793</string>
    <string name="menu_signout">Cerrar Sesión</string>
    <string name="menu_about">Acerca de</string>
    <string name="likes_number">0</string>
    <string name="new_publication">Nueva publicación creada!</string>

</resources>
